--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Quiz App</string>
+    <string name="next_question">Go to Next Question</string>
+    <string name="submit_button">Submit</string>
 </resources>
