Modified code to where the submit button, upon pressing it, it will display the Toast message. The radio buttons are only there to set the selected answer to the current question.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Quiz App</string>
     <string name="next_question">Go to Next Question</string>
     <string name="submit_button">Submit</string>
+    <string name="attempted_questions">Attempted Questions:</string>
+    <string name="correct_answers">Correct Answers:</string>
 </resources>
