--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Quiz App</string>
     <string name="next_question">Go to Next Question</string>
     <string name="submit_button">Submit</string>
-    <string name="attempted_questions">Attempts: </string>
-    <string name="correct_answers">Correct: </string>
+    <string name="attempted_questions">Attempts: 0</string>
+    <string name="correct_answers">Correct: 0</string>
+    <string name="quizLabel">The App Math</string>
 </resources>
