Replaced radio buttons with custom buttons. Added drawables to draw rings for buttons, instead of the regular square gray button. Modified Tests and Quiz Activity to accomodate for AppCompatButton(s) instead of radio button types.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="attempted_questions">Attempts: 0</string>
     <string name="correct_answers">Correct: 0</string>
     <string name="quizLabel">The App Math</string>
+    <string name="buttonUnselected">#A7A9AB</string>
+    <string name="buttonSelected">#000000</string>
 </resources>
