Re-worked the logic of answering questions, both wrong and right. If the user selects the correct answer, the submit button is turned disabled with a green color and a correct text, and also the answer gets marked with green color. if The user selects the wrong question, all the mentioned before happens, but with an orange color. Also added a Next button, to jump to the next question by the user pressing on it. This allows for the behavior of displaying correct/incorrect, to be static and to let the user see what he has answered.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,11 @@
     <string name="attempted_questions">Attempts: 0</string>
     <string name="correct_answers">Correct: 0</string>
     <string name="quizLabel">The App Math</string>
-    <string name="buttonUnselected">#A7A9AB</string>
-    <string name="buttonSelected">#000000</string>
+    <string name="button_answer_unselected">#A7A9AB</string>
+    <string name="button_answer_selected">#000000</string>
+    <string name="next_button">NEXT</string>
+    <string name="submit_button_correct">Correct</string>
+    <string name="submit_button_incorrect">LOL NOOB INCORRECT</string>
+    <string name="correct_color">#00A550</string>
+    <string name="incorrect_color">#F7931D</string>
 </resources>
